# ccworkflow

./: .gitignore  CLAUDE.md  README.md  ccworkflow.spec  main.py  pyproject.toml
.claude/: automation-state.json
.claude/roles/: requirements-analyst.md
doc/PRD/: ClaudeCode配置制作与收藏工具PRD.md  ClaudeCode配置制作与收藏工具一期最终交付说明.md  ClaudeCode配置制作与收藏工具开发任务拆分文档.md  ClaudeCode配置制作与收藏工具技术文档.md
src/ccworkflow/app/: __init__.py  bootstrap.py  factory.py  runtime.py
src/ccworkflow/domain/: __init__.py  common_schema.py  enums.py  package_manifest_schema.py  package_schema.py  record_schema.py  settings_schema.py
src/ccworkflow/infra/: __init__.py  fs_gateway.py  hash_gateway.py  json_gateway.py  path_policy.py  time_gateway.py
src/ccworkflow/installers/: __init__.py  conflict_detector.py  hook_installer.py  mcp_installer.py  script_materializer.py  skill_installer.py  target_path_resolver.py
src/ccworkflow/integrations/: __init__.py  claude_cli_adapter.py
src/ccworkflow/repositories/: __init__.py  install_record_repository.py  package_repository.py  (+1 more)
tests/: conftest.py  test_app.py  test_bootstrap.py  test_conflict_detector.py  test_generate_handoff.py  test_generate_routes.py  test_generate_service.py  test_install_conflict_execution.py  test_install_execute_routes.py  test_install_preview_routes.py  test_installers.py  test_package_routes.py  test_package_services.py  test_page_routes.py  test_path_policy.py  test_record_routes.py  test_root_init_service.py  test_script_materializer.py  test_settings_routes.py  test_target_path_resolver.py  test_uninstall_service.py
(+30 files in other folders)
