[project]
name = "ccworkflow"
version = "0.1.0"
description = "Claude Code 配置制作、收藏与安装工具"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "uvicorn>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pyinstaller>=6.0,<7.0",
    "pytest>=8.0,<9.0",
]
